--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@ margin: 0 0 10px 10px; /* Отступы вокруг картинки */
     text-align: center;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
 .emgtable {
     width: 100%; /* Ширина таблицы */
     border-collapse: collapse; /* Убираем двойные рамки */
